// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`function with a bucket binding requiring only read 1`] = `
"new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(event) { await this.bucket.get(\\"hello.txt\\"); }
};
})())({
bucket: new (require(\\"[REDACTED]/wingsdk/src/target-tf-azure/bucket.inflight\\")).BucketClient(process.env[\\"BUCKET_NAME_e51fbb13\\"], process.env[\\"STORAGE_ACCOUNT_e51fbb13\\"], process.env[\\"BUCKET_NAME_e51fbb13_IS_PUBLIC\\"])
})"
`;

exports[`function with a bucket binding requiring only read 2`] = `
{
  "output": {
    "WING_TEST_RUNNER_FUNCTION_IDENTIFIERS": {
      "value": "[]",
    },
  },
  "resource": {
    "azurerm_application_insights": {
      "ApplicationInsights": {
        "application_type": "web",
        "location": "\${azurerm_resource_group.ResourceGroup.location}",
        "name": "application-insights",
        "resource_group_name": "\${azurerm_resource_group.ResourceGroup.name}",
        "workspace_id": "\${azurerm_log_analytics_workspace.LogAnalyticsWorkspace.id}",
      },
    },
    "azurerm_linux_function_app": {
      "Function_042596DC": {
        "app_settings": {
          "BUCKET_NAME_e51fbb13": "\${azurerm_storage_container.Bucket_DC7D6F65.name}",
          "BUCKET_NAME_e51fbb13_IS_PUBLIC": "false",
          "FUNCTIONS_WORKER_RUNTIME": "node",
          "STORAGE_ACCOUNT_e51fbb13": "\${azurerm_storage_account.StorageAccount.name}",
          "WEBSITE_RUN_FROM_PACKAGE": "https://\${azurerm_storage_account.StorageAccount.name}.blob.core.windows.net/\${azurerm_storage_container.Function_FunctionBucket_0F705EF9.name}/\${azurerm_storage_blob.Function_CodeBlob_8A9705C9.name}",
        },
        "https_only": true,
        "identity": {
          "type": "SystemAssigned",
        },
        "location": "\${azurerm_resource_group.ResourceGroup.location}",
        "name": "function-c852aba6",
        "resource_group_name": "\${azurerm_resource_group.ResourceGroup.name}",
        "service_plan_id": "\${azurerm_service_plan.ServicePlan.id}",
        "site_config": {
          "application_insights_connection_string": "\${azurerm_application_insights.ApplicationInsights.connection_string}",
          "application_insights_key": "\${azurerm_application_insights.ApplicationInsights.instrumentation_key}",
          "application_stack": {
            "node_version": "18",
          },
        },
        "storage_account_access_key": "\${azurerm_storage_account.StorageAccount.primary_access_key}",
        "storage_account_name": "\${azurerm_storage_account.StorageAccount.name}",
      },
    },
    "azurerm_log_analytics_workspace": {
      "LogAnalyticsWorkspace": {
        "location": "East US",
        "name": "Default-c82bf964",
        "resource_group_name": "\${azurerm_resource_group.ResourceGroup.name}",
      },
    },
    "azurerm_resource_group": {
      "ResourceGroup": {
        "location": "East US",
        "name": "Default-c82bf964",
      },
    },
    "azurerm_role_assignment": {
      "Function_ReadLambdaCodeAssignment_75049D5E": {
        "principal_id": "\${azurerm_linux_function_app.Function_042596DC.identity[0].principal_id}",
        "role_definition_name": "Storage Blob Data Reader",
        "scope": "\${azurerm_storage_account.StorageAccount.id}",
      },
    },
    "azurerm_service_plan": {
      "ServicePlan": {
        "location": "\${azurerm_resource_group.ResourceGroup.location}",
        "name": "Default-c82bf964",
        "os_type": "Linux",
        "resource_group_name": "\${azurerm_resource_group.ResourceGroup.name}",
        "sku_name": "Y1",
      },
    },
    "azurerm_storage_account": {
      "StorageAccount": {
        "account_replication_type": "LRS",
        "account_tier": "Standard",
        "location": "\${azurerm_resource_group.ResourceGroup.location}",
        "name": "defaultc82bf964",
        "resource_group_name": "\${azurerm_resource_group.ResourceGroup.name}",
      },
    },
    "azurerm_storage_blob": {
      "Function_CodeBlob_8A9705C9": {
        "name": "function-c852aba6.zip",
        "source": "<source>",
        "storage_account_name": "\${azurerm_storage_account.StorageAccount.name}",
        "storage_container_name": "\${azurerm_storage_container.Function_FunctionBucket_0F705EF9.name}",
        "type": "Block",
      },
    },
    "azurerm_storage_container": {
      "Bucket_DC7D6F65": {
        "container_access_type": "private",
        "name": "bucket-c88fdc5f",
        "storage_account_name": "\${azurerm_storage_account.StorageAccount.name}",
      },
      "Function_FunctionBucket_0F705EF9": {
        "container_access_type": "private",
        "name": "functionbucket-c8ccf7e8",
        "storage_account_name": "\${azurerm_storage_account.StorageAccount.name}",
      },
    },
  },
}
`;

exports[`function with a bucket binding requiring read_write 1`] = `
"new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(event) { await this.bucket.put(\\"hello.txt\\", event); }
};
})())({
bucket: new (require(\\"[REDACTED]/wingsdk/src/target-tf-azure/bucket.inflight\\")).BucketClient(process.env[\\"BUCKET_NAME_e51fbb13\\"], process.env[\\"STORAGE_ACCOUNT_e51fbb13\\"], process.env[\\"BUCKET_NAME_e51fbb13_IS_PUBLIC\\"])
})"
`;

exports[`function with a bucket binding requiring read_write 2`] = `
{
  "output": {
    "WING_TEST_RUNNER_FUNCTION_IDENTIFIERS": {
      "value": "[]",
    },
  },
  "resource": {
    "azurerm_application_insights": {
      "ApplicationInsights": {
        "application_type": "web",
        "location": "\${azurerm_resource_group.ResourceGroup.location}",
        "name": "application-insights",
        "resource_group_name": "\${azurerm_resource_group.ResourceGroup.name}",
        "workspace_id": "\${azurerm_log_analytics_workspace.LogAnalyticsWorkspace.id}",
      },
    },
    "azurerm_linux_function_app": {
      "Function_042596DC": {
        "app_settings": {
          "BUCKET_NAME_e51fbb13": "\${azurerm_storage_container.Bucket_DC7D6F65.name}",
          "BUCKET_NAME_e51fbb13_IS_PUBLIC": "false",
          "FUNCTIONS_WORKER_RUNTIME": "node",
          "STORAGE_ACCOUNT_e51fbb13": "\${azurerm_storage_account.StorageAccount.name}",
          "WEBSITE_RUN_FROM_PACKAGE": "https://\${azurerm_storage_account.StorageAccount.name}.blob.core.windows.net/\${azurerm_storage_container.Function_FunctionBucket_0F705EF9.name}/\${azurerm_storage_blob.Function_CodeBlob_8A9705C9.name}",
        },
        "https_only": true,
        "identity": {
          "type": "SystemAssigned",
        },
        "location": "\${azurerm_resource_group.ResourceGroup.location}",
        "name": "function-c852aba6",
        "resource_group_name": "\${azurerm_resource_group.ResourceGroup.name}",
        "service_plan_id": "\${azurerm_service_plan.ServicePlan.id}",
        "site_config": {
          "application_insights_connection_string": "\${azurerm_application_insights.ApplicationInsights.connection_string}",
          "application_insights_key": "\${azurerm_application_insights.ApplicationInsights.instrumentation_key}",
          "application_stack": {
            "node_version": "18",
          },
        },
        "storage_account_access_key": "\${azurerm_storage_account.StorageAccount.primary_access_key}",
        "storage_account_name": "\${azurerm_storage_account.StorageAccount.name}",
      },
    },
    "azurerm_log_analytics_workspace": {
      "LogAnalyticsWorkspace": {
        "location": "East US",
        "name": "Default-c82bf964",
        "resource_group_name": "\${azurerm_resource_group.ResourceGroup.name}",
      },
    },
    "azurerm_resource_group": {
      "ResourceGroup": {
        "location": "East US",
        "name": "Default-c82bf964",
      },
    },
    "azurerm_role_assignment": {
      "Function_ReadLambdaCodeAssignment_75049D5E": {
        "principal_id": "\${azurerm_linux_function_app.Function_042596DC.identity[0].principal_id}",
        "role_definition_name": "Storage Blob Data Reader",
        "scope": "\${azurerm_storage_account.StorageAccount.id}",
      },
      "Function_RoleAssignmentc8e1d35875c13ca650f2fed5dbae08291b89c185ec_StorageBlobDataContributor_56D5F61F": {
        "principal_id": "\${azurerm_linux_function_app.Function_042596DC.identity[0].principal_id}",
        "role_definition_name": "Storage Blob Data Contributor",
        "scope": "\${azurerm_storage_account.StorageAccount.id}",
      },
    },
    "azurerm_service_plan": {
      "ServicePlan": {
        "location": "\${azurerm_resource_group.ResourceGroup.location}",
        "name": "Default-c82bf964",
        "os_type": "Linux",
        "resource_group_name": "\${azurerm_resource_group.ResourceGroup.name}",
        "sku_name": "Y1",
      },
    },
    "azurerm_storage_account": {
      "StorageAccount": {
        "account_replication_type": "LRS",
        "account_tier": "Standard",
        "location": "\${azurerm_resource_group.ResourceGroup.location}",
        "name": "defaultc82bf964",
        "resource_group_name": "\${azurerm_resource_group.ResourceGroup.name}",
      },
    },
    "azurerm_storage_blob": {
      "Function_CodeBlob_8A9705C9": {
        "name": "function-c852aba6.zip",
        "source": "<source>",
        "storage_account_name": "\${azurerm_storage_account.StorageAccount.name}",
        "storage_container_name": "\${azurerm_storage_container.Function_FunctionBucket_0F705EF9.name}",
        "type": "Block",
      },
    },
    "azurerm_storage_container": {
      "Bucket_DC7D6F65": {
        "container_access_type": "private",
        "name": "bucket-c88fdc5f",
        "storage_account_name": "\${azurerm_storage_account.StorageAccount.name}",
      },
      "Function_FunctionBucket_0F705EF9": {
        "container_access_type": "private",
        "name": "functionbucket-c8ccf7e8",
        "storage_account_name": "\${azurerm_storage_account.StorageAccount.name}",
      },
    },
  },
}
`;
